[gd_scene load_steps=3 format=3 uid="uid://by1amxyetspkt"]

[ext_resource type="Script" uid="uid://cf16pgngvr14y" path="res://obstacle/Obstacle.gd" id="1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0"]
radius = 8.0

[node name="Obstacle" type="Area2D"]
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_0")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
color = Color(1, 0, 0, 1)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
